--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_application_1">
+    <uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+<queries>
+    <!-- to opens https URLs -->
+    <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <data android:scheme="https" />
+    </intent>
+</queries>
    <application
         android:label="flutter_application_1"
         android:name="${applicationName}"
