--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   googleapis_auth: ^1.3.1
   page_transition: ^2.1.0
   provider: ^6.1.2
+  table_calendar: ^3.1.2
   url_launcher: ^6.1.11
   # cupertino_icons: ^1.0.6
   # page_transition: ^2.1.0
@@ -79,6 +80,9 @@ flutter:
     - lib\assets\facebook_logo.webp
     - lib\assets\dr.jpeg
     - lib\assets\star.png
+    - lib\assets\Deep_breath.png
+    - lib\assets\meditate.png
+    - lib\assets\Brain.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
