--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,21 +29,27 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^4.14.0
+  intl: ^0.19.0
+  cloud_firestore: ^5.4.4 
   curved_navigation_bar: ^1.0.3
   cupertino_icons: ^1.0.5
   dart_levenshtein: ^1.0.1
-  firebase_auth: ^4.16.0
-  firebase_core: ^2.24.2
+  image_picker: ^1.1.2
+  file_picker: ^8.1.2
+  firebase_auth: ^5.3.1
+  firebase_core: ^3.6.0
   flutter:
     sdk: flutter
   fuzzy: ^0.5.0
-  googleapis: ^10.1.0
-  googleapis_auth: ^1.3.1
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
   page_transition: ^2.1.0
+  http: ^1.2.2
+  google_sign_in: ^6.1.0
   provider: ^6.1.2
   table_calendar: ^3.1.2
   url_launcher: ^6.1.11
+  firebase_storage: ^12.3.3
   # cupertino_icons: ^1.0.6
   # page_transition: ^2.1.0
   # firebase_core: ^3.2.0
