--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     </intent>
 </queries>
    <application
-        android:label="flutter_application_1"
+        android:label="TherapEase"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
