--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   cupertino_icons: ^1.0.5
   dart_levenshtein: ^1.0.1
+  shared_preferences:
   image_picker: ^1.1.2
   file_picker: ^8.1.2
   firebase_auth: ^5.3.1
@@ -46,6 +47,7 @@ dependencies:
   page_transition: ^2.1.0
   http: ^1.2.2
   google_sign_in: ^6.1.0
+  video_player: ^2.4.5
   provider: ^6.1.2
   table_calendar: ^3.1.2
   url_launcher: ^6.1.11
@@ -61,14 +63,17 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_launcher_icons: ^0.9.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
+# flutter_icons:
+#   android: true
+#   ios: true
+#   image_path: lib/assets/therapy_logo1.png
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -88,7 +93,7 @@ flutter:
       - lib\assets\dr.jpeg
       - lib\assets\star.png
       - lib\assets\Deep_breath.png
-      - lib\assets\meditate.png
+      - lib/assets/meditate.png
       - lib\assets\Brain.png
       - lib/assets/home.png
       - lib\assets\appointments.png
@@ -97,7 +102,13 @@ flutter:
       - lib/assets/settings.png
       - lib/assets/reviews.png
       - lib/assets/slots.png
-
+      - lib/assets/pending-orders.png
+      - lib/assets/management.png
+      - lib/assets/payments.png
+      - lib/assets/profile_logo.png
+      - lib/assets/sleeplogo.png
+      - lib/assets/breath_logo.jpg
+      - lib/assets/muscle_relax.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
